Better (md) index page, Improve path handling